syntax = "proto3";

option java_package = "ir.ms.pb";
option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";


enum RPC_Auth_Enum {
    EMPTY = 0;
    SendConfirmCode = 939965206;
    ConfirmCode = 1740258084;
    SingUp = 291193302;
    SingIn = 1017957090;
    LogOut = 1283119009;
}
