syntax = "proto3";

package pb;

import "global.proto";


service RPC_Auth {
    rpc AuthSendCode (AuthSendCodeParam) returns (AuthSendCodeResponse);
    rpc AuthLogIn (AuthLogInParam) returns (AuthLogInResponse);
    // Do not impl this yet
    rpc AuthLogOut (AuthLogOutParam) returns (AuthLogOutResponse);
}


message AuthSendCodeParam {
    string phone_number = 2; // 9015132134
    string country_code = 3; // 98
    bool resend = 4;
}

message AuthSendCodeResponse {
    string hash_code = 1; // a unique code like a session for duration of login or register
    bool phone_registered = 2; // if ture then LogIn otherwise use:create rpc
}

message AuthLogInParam {
    string hash_code = 1;
    string phone_number = 2; // 9015132134 , not needed just for rechecking
    string confirm_code = 3;
}

message AuthLogInResponse {
    User user = 1;
    Session session = 2; // A new session for this log in
}


message AuthLogOutParam {
}

message AuthLogOutResponse {
    bool Done = 1;
}
