package ir.ms.pb;

public class RPC_API {


public static class RPC_Auth {
	
        public static final String SendConfirmCode = "RPC_Auth.SendConfirmCode";
        public static final String ConfirmCode = "RPC_Auth.ConfirmCode";
        public static final String SingUp = "RPC_Auth.SingUp";
        public static final String SingIn = "RPC_Auth.SingIn";
        public static final String LogOut = "RPC_Auth.LogOut";}
	
}